          to send events.
        - Use jEdit's service framework to register extensions to PV.
          This will be used for all extensions except option panes,
          since those work differently inside jEdit and we'd like to
          reuse as much code from the core as possible.
        - Remove the toolbar from the PV GUI.


================================================================================

Version 2.1.3.7:
	[marcelo vanzin]
		- fix NPE in ProjectManager.removeProject()
		- fix deadlock when creating new project
		- fix working file list not being updated
		- add code to avoid some memory leaks in the flat trees.
		- use WeakHashMaps where it makes sense to avoid leaks.

Version 2.1.3.6:
	[marcelo vanzin]
		- don't ignore errors when ProjectManager is starting up; that way,
		  PV won't try to overwrite configuration files with default values
		  when something wrong happens (but at the same time PV won't work
		  either)
		- some minor changes to the node renaming dialog.
		- added option to not follow the current buffer in the project tree.
		- less buggy node renaming; renaming files was causing weird
		  behavior.
		- added VPTProject.unregisterNodePath(String)
		- enable tooltips for some of the trees that don't show the
		  directory structure.
		- respect the "skip binary files" option added in jEdit 4.3pre5
		  when searching. (FR #1577636)
		- respect the file filter glob when searching. (Bug #1597117)
		- if a chosen external app fails to run, don't set it as the
		  default app for the extension. (Bug #1631847)
		- make sure project is loaded before trying to search it.
		  (Bug #1567012)
		- implement FR #1553055 (I know it's filed as a bug :-)). It
		  mostly works, but may not behave as expected sometimes. More
		  exactly, when re-opening jEdit with several views, the
		  projects might not load on the expected view. That's because
		  jEdit seems to randomly open the views in weird orders,